Bug #34243 et al
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51763 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-02-samba.yaml
+++ b/doc/errata/staging/2014-07-02-samba.yaml
@@ -17,8 +17,8 @@ desc: |
       after they changed the logon password for their account. Domains
       affected by this need to manually remove the object
       "CN=BCKUPKEY_PREFERRED Secret" from the Samba directory service after
-      the update make Samba internally genrate a new ticket for the Backupkey
-      protocol.
+      the update to make Samba internally generate a new ticket for the 
+      Backupkey protocol.
 bug: [35192, 35287]
 cve:
  - CVE-2014-0244
