--- a/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
@@ -6,14 +6,17 @@ fix: 3.0.152-38.837.201407090845
 version: [2]
 desc: |
   This update fixes the following issues:
-  * The UMC grid can now allow the execution of an action even though some of
-    the selected items are not executable w.r.t. to the action.
-  * A function has been added to reload the modules of the overview tab on the fly.
-  * A default link to UMC has been added on the UCS overview page for unjoined
-    systems
-  * When installing a new system which is neither a domaincontroller master nor a
-    domaincontroller backup, the UMC entry in the UCS overview page will no longer
-    consider the UMC a domain administration tool, as the domain wide modules are only
-    available on master and backup systems.
-  * A timeout problem in the univention-management-console-web-server has been fixed.
+  * The UMC grid can now allow the execution of an action even though 
+    some of the selected items are not executable with regard to the 
+    action.
+  * A function has been added to reload the modules of the overview 
+    tab on the fly.
+  * A default link to UMC has been added on the UCS overview page for 
+    unjoined systems
+  * When installing a new system which is neither a master domain controller 
+    master nor a backup domain controller backup, the UMC entry in the 
+    UCS overview page will no longer consider the UMC a domain 
+    administration tool, as the domain modules are only available on 
+    master and backup systems.
+  * A timeout problem in the UMC web server has been fixed.
 bug: [34965, 34243, 34317, 33615, 35052]
