--- a/doc/errata/staging/2014-06-12-univention-management-console-module-lib.yaml
+++ b/doc/errata/staging/2014-06-12-univention-management-console-module-lib.yaml
@@ -5,6 +5,6 @@ src: univention-management-console-module-lib
 fix: 3.0.7-2.23.201406121114
 version: [2]
 desc: |
-  This update fixes the following issues:
-  * When a user cancels the dialog which asks for a UMC server restart the modules on the UMC overview are now reloaded.
+  * When a user cancels the dialogue which asks for a UMC server restart, the 
+    modules on the UMC overview page are now reloaded.
 bug: [34243]
