--- a/doc/errata/staging/2014-06-17-clamav.yaml
+++ b/doc/errata/staging/2014-06-17-clamav.yaml
@@ -6,5 +6,5 @@ fix: 0.98.1+dfsg-1.128.201406171144
 note:
 version: [2]
 desc: |
-  Clamav has been updated to upstream version 0.98.1.
+  ClamAV has been updated to version 0.98.1.
 bug: [33995]
