--- a/management/univention-management-console-module-appcenter/debian/rules
+++ b/management/univention-management-console-module-appcenter/debian/rules
@@ -3,7 +3,7 @@
 # PACKAGES
 #  rules file for the debian package
 #
-# Copyright 2004-2013 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -31,7 +31,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
 PO_FILES := $(shell find udm -name '*.po')
 MO_FILES := $(PO_FILES:%.po=%.mo)
