Bug #35107 UVMM: Fix paused VM handling [YAML]
Fix one mistyped PAUSE[+D+].
Show VNC button for paused VMs.
Simplify canExecute.
Fix canStart().
Allow paused VMs to be shut-down.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51773 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-02-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-07-02-univention-virtual-machine-manager-daemon.yaml
@@ -14,4 +14,6 @@ desc: |
     autosearch is disabled.
     Additionally, the grid is updated non-invasively at a configurable
     interval (new UCR variable uvmm/umc/autoupdate/interval).
-bug: [35122]
+  * Paused VMs are now handled more similar to running VMs, which allows, for
+    exmaple, VNC to be used for paused VMs, too.
+bug: [35122, 35107]
