Bug #30547: added dependencies to debian-cd und some other tools; added patched version of make_disc_trees.pl
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51795 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/control
+++ b/base/univention-dvd/debian/control
@@ -6,7 +6,10 @@ Build-Depends: debhelper (>= 9)
 
 Package: univention-dvd
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
+ debian-cd,
+ mtools,
+ dosfstools
 Description: UCS-DVD build settings
  This package contains the DVD build settings and DVD
  trigger files for UCS DVDs.
