--- a/virtualization/univention-virtual-machine-manager-schema/debian/rules
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/rules
@@ -3,7 +3,7 @@
 # UCS Virtual Machine Manager schema
 #  rules file for the debian package
 #
-# Copyright 2009-2013 Univention GmbH
+# Copyright 2009-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -31,7 +31,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
 override_dh_auto_install:
 	univention-install-config-registry
