--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -4,11 +4,12 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  ucslint-univention,
- python2.6-dev,
+ python2.7-dev,
  python-support,
  python-polib,
  univention-config-dev
 Standards-Version: 3.7.2
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-management-console
 Architecture: all
