--- a/management/univention-management-console/debian/rules
+++ b/management/univention-management-console/debian/rules
@@ -32,7 +32,7 @@
 
 override_dh_auto_build:
 	./dev/dh-umc-module-build --core
-	dh_auto_build -- --executable=/usr/bin/python2.6
+	dh_auto_build -- --executable=/usr/bin/python2.7
 
 override_dh_auto_install:
 	./dev/dh-umc-module-install --core
@@ -47,4 +47,4 @@ override_dh_auto_test:
 	dh_auto_test
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
