* Bug #35145: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51825 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/umc-module-templates/debian/rules
+++ b/management/univention-management-console/umc-module-templates/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 #
-# Univention Directory Manager
+# Univention Management Console Module
 #  rules file for the debian package
 #
 # Copyright YEAR Univention GmbH
@@ -31,7 +31,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
 
 override_dh_auto_test:
 	ucslint
