--- a/management/univention-management-console-module-adtakeover/debian/control
+++ b/management/univention-management-console-module-adtakeover/debian/control
@@ -5,6 +5,7 @@ Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
 Build-Depends: debhelper (>> 7),
  ucslint-univention,
+ python2.6-dev,
  python2.7-dev,
  python-support,
  univention-management-console-dev,
