--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  ucslint-univention,
+ python2.6-dev,
  python2.7-dev,
  python-support,
  python-polib,
