--- a/doc/errata/staging/2014-06-13-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-06-13-univention-system-setup.yaml
@@ -6,6 +6,8 @@ fix: 7.0.69-10.571.201407091358
 version: [2]
 desc: |
   This update fixes the following issues:
+  * The setup wizard for UCS appliance has been entirely re-structured and
+    rewritten.
   * The univention-system-setup module process will not read the setup script
     output from pipe anymore. Instead, the output is directly written to the log.
     This way, running setup scripts will not terminate when the UMC module process
@@ -16,4 +18,4 @@ desc: |
     before accessing the setup wizard
   * Welcome page is now the apache default site when installing
     univention-system-setup-boot
-bug: [34105,34388]
+bug: [34484,34105,34388]
