* added univention-samba-ad-member (Bug #35095)   * Merge from ucs-in-ad-domain preview (Bug #35095)
    [ Arvid Requate ]
     * Remove configure_adds_dc_as_kdc function (Bug #34091)
     * remove the development version settings of timeserver (Bug #34091)
     * Let UCR variable ad/member decide upon AD Member mode (Bug #34091)
     * Abort join of another UCS DC if the UCS master claims to be AD Member (Bug #34091)
     * support explicit choice of samba/dc (Bug #34091)
     * ADDS DC lookup was moved to python-univention-lib (Bug #34091)
     * remove the development version settings of nameserver and AD-Connector (Bug #34091)
     * Lookup and store ADDS LDAP bind info for AD Connector (Bug #34091)
     * Keep the Samba4 KDC detection unchanged (Bug #34091)
     * Exit joinscript ASAP if required credentials are missing (Bug #34091)
     * Restart NTP server after changing UCR timeserver (Bug #34091)
     * Reconfigure UCR nameserver in AD Memberserver mode, at least for join (Bug #34091)
     * Exit joinscript if no credentials are given (Bug #34091)
     * Locate ADDS DC via net lookup dsgetdcname (Bug #34091)
     * Sync time with ADDS DC using SNTP and set it as timeserver (Bug #34091)
     * Set kerberos/kpasswdserver (Bug #34091)
     * Separate samba/role from server/role for (Bug #34091)


git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51833 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/control
+++ b/services/univention-samba/debian/control
@@ -7,6 +7,39 @@ Build-Depends: debhelper (>> 7),
  ucslint-univention
 Standards-Version: 3.5.2
 
+Package: univention-samba-ad-member
+Architecture: all
+Pre-Depends: samba (>= 3.0.20),
+ univention-config
+Depends: ${misc:Depends},
+ univention-config (>= 8.0.2),
+ univention-base-files,
+ univention-ldap-client (>= 1.4),
+ univention-directory-manager-tools,
+ smbclient,
+ winbind,
+ univention-directory-listener,
+ rsync,
+ univention-ssh,
+ expect,
+ univention-samba-local-config,
+ python-tdb,
+ samba-common-bin,
+ shell-univention-lib (>= 1.0.6),
+ python-univention-lib (>= 1.0.45)
+Conflicts: samba-ad-dc,
+ samba-dsdb-modules,
+ univention-samba
+Description: UCS - Samba AD member mode
+ This package contains the configuration for the Samba
+ AD member mode. It provides authentication, file and
+ print services for Windows computers.
+ .
+ It is part of Univention Corporate Server (UCS), an
+ integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
 Package: univention-samba
 Architecture: all
 Pre-Depends: samba (>= 3.0.20),
