* Bug #34484: [WIP] Integration of new appliance wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51842 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -55,12 +55,13 @@ Conflicts: univention-system-setup-appliance,
  univention-managed-client,
  univention-mobile-client,
  univention-basesystem,
- univention-system-setup (<< 5.0.129-1)
+ univention-system-setup (<< 5.0.129-1),
 Depends: ${misc:Depends},
  shell-univention-lib,
  univention-system-setup (= ${source:Version}),
  univention-server-master,
- univention-network-common
+ univention-network-common,
+ univention-management-console-module-appcenter
 Recommends: firefox-en | firefox-de | firefox,
  xinit,
  kde-window-manager
@@ -82,6 +83,8 @@ Depends: univention-management-console-server,
  univention-system-setup (= ${source:Version}),
  univention-updater,
  univention-management-console-module-lib,
+ univention-management-console-module-appcenter,
+ python-univention-lib,
  python-apt
 Description: UMC module for Univention system setup
  This package contains the UMC module for the UCS System Setup.
