--- a/management/univention-management-console-frontend/debian/control
+++ b/management/univention-management-console-frontend/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  imagemagick,
  rsync,
  php5-cli,
- nodejs-0.8,
+ nodejs,
  librsvg2-bin
 
 Package: univention-management-console-frontend
@@ -36,6 +36,7 @@ Depends: ${misc:Depends},
  univention-management-console-frontend,
  univention-management-console-server,
  python-univention-management-console (>= 4.0.268),
+ univention-base-files,
  python-cherrypy3,
  python-daemon,
  python-ipaddr,
