--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -70,7 +70,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-univention-directory-manager (>=9.0.75-1),
  univention-join,
  python-univention,
- python-pyopenssl,
+ python-openssl,
  python-pam,
  python-polib,
  python-notifier (>= 0.9.5-1)
