--- a/management/univention-system-info/debian/rules
+++ b/management/univention-system-info/debian/rules
@@ -3,7 +3,7 @@
 # Univention System Info
 #  rules file for the debian package
 #
-# Copyright 2009-2013 Univention GmbH
+# Copyright 2009-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -42,4 +42,4 @@ override_dh_auto_install:
 	dh_auto_install
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
