--- a/management/univention-join/debian/control
+++ b/management/univention-join/debian/control
@@ -3,7 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 Build-Depends: debhelper,
  ucslint-univention,
  univention-config-dev,
