--- a/management/univention-join/debian/rules
+++ b/management/univention-join/debian/rules
@@ -3,7 +3,7 @@
 # Univention Join
 #  rules file for the debian package
 #
-# Copyright 2004-2013 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -58,4 +58,4 @@ override_dh_fixperms:
 	chmod 755 debian/univention-join/usr/share/univention-join/univention-run-join-scripts
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
