* Bug #35145: remove obsolete things
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51865 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/package.json
+++ b/management/univention-management-console-frontend/package.json
@@ -25,7 +25,7 @@
 	"repositories": [{
 		"type": "svn",
 		"url": "http://forge.univention.org/svn/dev",
-		"path": "branches/ucs-3.1/ucs/management/univention-management-console-frontend"
+		"path": "branches/ucs-4.0/ucs4.0-0/management/univention-management-console-frontend"
 	}],
 	"dependencies": {
 		"dojo": "~1.8",
