--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-univention-management-console,
  python-imaging,
  univention-installer-modules,
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-system-setup
 Architecture: all
