--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-univention-management-console,
  python-imaging,
  univention-installer-modules,
+ unzip
 XS-Python-Version: 2.6
 
 Package: univention-system-setup
