Bug #34484 [WIP] * email validation + auto account description * added missing dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51889 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -15,6 +15,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-univention-lib,
  python-univention-management-console,
  python-imaging,
+ python-simplejson,
  univention-installer-modules,
  unzip
 XS-Python-Version: 2.6
@@ -86,6 +87,7 @@ Depends: univention-management-console-server,
  univention-management-console-module-lib,
  univention-management-console-module-appcenter,
  python-univention-lib,
+ python-simplejson,
  python-apt
 Description: UMC module for Univention system setup
  This package contains the UMC module for the UCS System Setup.
