added python to build dependencies (Bug #34572)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51896 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -12,7 +12,8 @@ Build-Depends: debhelper,
  libsmbclient-raw-dev,
  gcc-mingw32,
  libsamba-hostconfig-dev,
- libndr-standard-dev
+ libndr-standard-dev,
+ python
 
 Package: winexe
 Architecture: any
