added libdcerpc-dev to build dependencies (Bug #34572)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51897 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -5,6 +5,7 @@ Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper,
  build-essential,
  pkg-config,
+ libdcerpc-dev,
  libtalloc-dev,
  libtevent-dev,
  samba-dev,
