--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper,
  gcc-mingw32,
  libsamba-hostconfig-dev,
  libndr-standard-dev,
+ libgensec0,
  python
 
 Package: winexe
