added libnetapi0 to build dependencies (Bug #34572)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51900 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -15,6 +15,7 @@ Build-Depends: debhelper,
  libsamba-hostconfig-dev,
  libndr-standard-dev,
  libgensec0,
+ libnetapi0,
  python
 
 Package: winexe
