added mingw32-runtime, libc6-dev to build dependencies (Bug #34572)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51902 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -16,6 +16,8 @@ Build-Depends: debhelper,
  libndr-standard-dev,
  libgensec0,
  libnetapi0,
+ libc6-dev,
+ mingw32-runtime,
  python
 
 Package: winexe
