Bug #35384,35385,35372,35375 d-i: disable modules
Disable several Debian Installer modules by removing them from the DVD.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51926 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -46,7 +46,7 @@ unset MAXCDS            || true
 unset MAXISOS           || true
 unset MAXJIGDOS         || true
 unset SPLASHPNG         || true
-unset OMIT_MANUAL	 || true
+unset OMIT_MANUAL       || true
 unset OMIT_RELEASE_NOTES || true
 unset OMIT_DOC_TOOLS     || true
 unset MAX_PKG_SIZE       || true
@@ -356,7 +356,7 @@ export SNAPURL=Debian=http://snapshot.debian.org/archive/debian/SNAPDATETIME/
 #export UDEB_INCLUDE="$BASEDIR"/data/$CODENAME/udeb_include
 
 # File with list of packages to exclude as above.
-#export UDEB_EXCLUDE="$BASEDIR"/data/$CODENAME/udeb_exclude
+export UDEB_EXCLUDE="$BASEDIR"/data/$CODENAME/udeb_exclude
 
 # File with list of packages to include when running debootstrap from
 # the first stage installer (currently only supported in
