Bug #35384,35385,35372,35375 d-i: Fix path
Fix wrong directory task -> data
Add lilo to exclude list.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51966 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -356,7 +356,7 @@ export SNAPURL=Debian=http://snapshot.debian.org/archive/debian/SNAPDATETIME/
 #export UDEB_INCLUDE="$BASEDIR"/data/$CODENAME/udeb_include
 
 # File with list of packages to exclude as above.
-export UDEB_EXCLUDE="$BASEDIR"/data/$CODENAME/udeb_exclude
+export UDEB_EXCLUDE="$BASEDIR"/data/$CODENAME/ucs_exclude
 
 # File with list of packages to include when running debootstrap from
 # the first stage installer (currently only supported in
