Bug #34484 [WIP] * fixed reference to undefined * fixed undefined description of apps * added package dependencies * added automatic DNS query of domain name * ensure that wizard values are returned in the correct format for backend * ensure that apps are displayed only for the selected server role * replaced old software component handling from installer with apps * read pre-configured DHCP settings + apply them to the network wizard page * add backend-side auto completion of specific config values * add UCS system activation via submitted email address in setup-join.sh
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51969 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -86,8 +86,10 @@ Depends: univention-management-console-server,
  univention-updater,
  univention-management-console-module-lib,
  univention-management-console-module-appcenter,
+ univention-management-console-frontend (>= 3.0.152-40),
  python-univention-lib,
  python-simplejson,
+ python-dnspython,
  python-apt
 Description: UMC module for Univention system setup
  This package contains the UMC module for the UCS System Setup.
