added postgresql-9.1 support (Bug #35147)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51981 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-postgresql/debian/control
+++ b/services/univention-postgresql/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper,
 
 Package: univention-postgresql
 Architecture: all
-Pre-Depends: postgresql-8.4 | postgresql-8.3 | postgresql-7.4
+Pre-Depends: postgresql-9.1 | postgresql-8.4 | postgresql-8.3 | postgresql-7.4
 Depends: ${misc:Depends},
  shell-univention-lib (>= 3.0.4-1),
  univention-config-registry
