--- a/test/ucs-windows-tools/debian/control
+++ b/test/ucs-windows-tools/debian/control
@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 7),
 Package: ucs-windows-tools
 Architecture: all
 Depends: ${python:Depends},
- ${misc:Depends}
+ ${misc:Depends},
+ winexe
 Provides: ${python:Provides}
 Description: windows tool collection for UCS development
  This package contains tools to test UCS installations.
