Bug #35425 UVMM: UCS-4.0 version bump
Python 2.6 -> 2.7
Debhelper 9.
Remove previous upgrade handling.
Drop useless *.dirs files.
Extend copyright to 2014.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52026 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-novnc/debian/rules
+++ b/virtualization/univention-novnc/debian/rules
@@ -2,7 +2,7 @@
 #
 # univention-novnc
 #
-# Copyright 2013 Univention GmbH
+# Copyright 2013-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -31,7 +31,7 @@
 
 clean:
 	make -C utils clean
-	dh clean
+	dh clean --with python_support
 
 build:
 	#make -C utils rebind.so
@@ -44,4 +44,4 @@ override_dh_auto_test:
 	ucslint
 
 %:
-	dh ${@}
+	dh $@ --with python_support
