--- a/virtualization/univention-novnc/debian/control
+++ b/virtualization/univention-novnc/debian/control
@@ -2,11 +2,12 @@ Source: univention-novnc
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Build-Depends: debhelper (>= 7.0.0~),
+Build-Depends: debhelper (>= 9),
  lsb-base (>= 3.0-6),
  ucslint-univention,
  univention-config-dev,
 Standards-Version: 3.8.3
+XS-Python-Version: 2.6, 2.7
 Homepage: https://github.com/kanaka/noVNC/
 
 Package: univention-novnc
