--- a/virtualization/univention-virtual-machine-manager-node/debian/control
+++ b/virtualization/univention-virtual-machine-manager-node/debian/control
@@ -4,10 +4,11 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Uploaders: Philipp Hahn <hahn@univention.de>,
  Andreas Büsching <buesching@univention.de>,
-Build-Depends: debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 9),
  ucslint-univention,
  univention-config-dev
 Standards-Version: 3.7.3
+XS-Python-Version: 2.6, 2.7
 Homepage: http://www.univention.de/
 
 Package: univention-virtual-machine-manager-node-common
