--- a/base/univention-updater/debian/control
+++ b/base/univention-updater/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>> 7),
  python-support (>= 0.90),
  ucslint-univention,
  univention-management-console-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-updater
 Architecture: all
