--- a/test/ucs-ec2-tools/debian/control
+++ b/test/ucs-ec2-tools/debian/control
@@ -5,6 +5,7 @@ Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7),
  ucslint-univention
 Standards-Version: 3.7.2
+XS-Python-Version: 2.6, 2.7
 
 Package: ucs-ec2-tools
 Architecture: all
