* examples/jenkins/autotest-*.cfg: copy the ~/ec2/license/license.secret   file to access the license shop from autotest envs (Bug #35205)
(Merged from UCS 3.2-2 r51523)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52086 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
@@ -63,6 +63,7 @@ files:
  ~/ec2/license/autotest103.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [backup103]
 profile:
@@ -102,4 +103,5 @@ command7:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
