--- a/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
@@ -66,6 +66,7 @@ files:
  ~/ec2/license/autotest127.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [member127]
 profile:
@@ -107,4 +108,5 @@ command8:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
