--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -64,4 +64,5 @@ files:
  ~/ec2/license/autotest090.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
