--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -62,6 +62,7 @@ files:
  ~/ec2/license/autotest095.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [slave095]
 profile:
@@ -98,4 +99,5 @@ command6:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
