--- a/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
@@ -61,6 +61,7 @@ files:
  ~/ec2/license/autotest096.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [member096]
 profile:
@@ -96,4 +97,5 @@ command6:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
