--- a/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
@@ -68,4 +68,5 @@ files:
  ~/ec2/license/autotest101.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
