--- a/test/ucs-ec2-tools/examples/jenkins/autotest-104-app-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-104-app-slave-s3.cfg
@@ -63,6 +63,7 @@ files:
  ~/ec2/license/autotest104.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [slave104]
 profile:
@@ -100,4 +101,5 @@ command7:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
