--- a/test/ucs-ec2-tools/examples/jenkins/autotest-120-appupdate-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-120-appupdate-master-s3.cfg
@@ -69,4 +69,5 @@ files:
  ~/ec2/license/autotest120.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
