--- a/test/ucs-ec2-tools/examples/jenkins/autotest-121-appupdate-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-121-appupdate-master-s4.cfg
@@ -71,4 +71,5 @@ files:
  ~/ec2/license/autotest121.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
