--- a/test/ucs-ec2-tools/examples/jenkins/autotest-124-appupdate-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-124-appupdate-slave-s3.cfg
@@ -66,6 +66,7 @@ files:
  ~/ec2/license/autotest124.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [slave124]
 profile:
@@ -106,4 +107,5 @@ command8:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
