* Remove univention-directory-policy from the dependencies and add it   to the list of recommended packages (Bug #35431)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52099 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/control
+++ b/base/univention-updater/debian/control
@@ -14,7 +14,6 @@ Package: univention-updater
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
  univention-config-registry,
- univention-directory-policy,
  netcat,
  wget,
  apt-mirror,
@@ -24,6 +23,8 @@ Depends: ${misc:Depends}, ${python:Depends},
  shell-univention-lib,
  python-univention-lib (>= 1.0.25-1),
  univention-errata-level
+Recommends:
+ univention-directory-policy,
 Provides: ${python:Provides}
 Description: UCS - system upgrading tool
  UCS Updater can upgrade your version of UCS.
