--- a/packaging/ucslint/debian/control
+++ b/packaging/ucslint/debian/control
@@ -16,6 +16,7 @@ Depends:
  devscripts,
  python-libtre
 Conflicts: ucs-tools (<< 1.2.5)
+XS-Python-Version: 2.6, 2.7
 Description: Check packaging for UCS
  This package contains the Univention tool ucslint that
  is able to check debian source packages against common
@@ -33,6 +34,7 @@ Depends:
  ${misc:Depends},
  ucslint
 Conflicts: ucs-tools (<< 1.2.5)
+XS-Python-Version: 2.6, 2.7
 Description: Univention-specific ucslint tests
  This package contains Univention specific tests for ucslint
  (e.g. copyright checks or maintainer information checks).
