* uss-boot: remove dependecy to univention-server-master * uss-boot: allow iceweasel as browser   Bug #35267
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52103 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -59,10 +59,9 @@ Conflicts: univention-system-setup-appliance,
 Depends: ${misc:Depends},
  shell-univention-lib,
  univention-system-setup (= ${source:Version}),
- univention-server-master,
  univention-network-common,
  univention-management-console-module-appcenter
-Recommends: firefox-en | firefox-de | firefox,
+Recommends: iceweasel | firefox-en | firefox-de | firefox,
  xinit,
  kde-window-manager
 Replaces: univention-setup-boot, univention-system-setup-appliance
