--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -30,6 +30,7 @@ Depends: ${misc:Depends},
  univention-management-console-module-sysinfo,
  univention-management-console-module-appcenter,
  univention-management-console-module-apps,
+Recommends:
  univention-management-console-module-quota
 Description: UCS Management Console - Web based computer administration tool
  UCS Management Console is a web based program to manage computers.
