Devdoc Bug #35454, Bug #35453
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52135 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/developer-reference/apps/application.ini
+++ b/doc/developer-reference/apps/application.ini
@@ -135,6 +135,19 @@ UseShop=True
 # Default is https://shop.univention.com
 ShopURL=https://shop.maintain.com/application
 
+# When UCS is not managing the domain but instead is only part of a Windows
+# controlled Active Directory domain, the environment in which the app runs is
+# different and certain services that this app relies may not not be running.
+# Thus, there are issues and incompatibilities that should be stated:
+# * App should not be installed in an AD (results in not being shown in the App
+#   Center in such environments):
+#ADMemberIssueHide=True
+# * App needs a password service running on the Windows domain controller, e.g.
+#   because it needs the samba hashes to authenticate users (results in a
+#   warning and a link to the documentation how to set up that service in such
+#   environments)
+#ADMemberIssuePassword=True
+
 # German translations
 [de]
 Description=Lorem ipsum dolor sit amet, consetetur sadipscing elitr, se.
