Bug #35378: added missing dependencies / start X11 server only if not already running
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52156 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -77,6 +77,8 @@ Description: Starting univention-system-setup on next boot
 Package: univention-management-console-module-setup
 Architecture: all
 Depends: univention-management-console-server,
+ ${misc:Depends},
+ ${python:Depends},
  univention-directory-manager-tools (>> 7.0.147),
  univention-system-setup (= ${source:Version}),
  univention-updater,
