* Bug #35090 [WIP]: enabled build of UMC module, fixed fuzzy entries
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52191 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/control
+++ b/services/univention-ad-connector/debian/control
@@ -60,7 +60,7 @@ Depends: ${misc:Depends},
  shell-univention-lib (>= 1.0.6),
  python-univention-lib (>= 3.0.26-23),
  univention-base-files,
- univention-management-console-module-adconnector (= ${binary:Version})
+ univention-management-console-module-adconnector (= ${binary:Version}),
  python-samba,
  python-ldb,
  samba-common-bin
