Bug #35378: updated dependencies (Provides: configured-ucs)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52196 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/control
+++ b/base/di-univention-system-setup/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
 Package: di-univention-system-setup
 Architecture: i386 amd64
 XB-Subarchitecture: ${subarch}
-Provides: bootable-system
+Provides: configured-ucs
 Depends: cdebconf-udeb, kernel-installer, di-utils, installed-base, created-fstab, bootable-system
 XB-Installer-Menu-Item: 7650
 Package-Type: udeb
