Bug #35378: added another dependency / fixed switch to user nobody: keep DISPLAY env variable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52202 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -60,7 +60,8 @@ Depends: ${misc:Depends},
  shell-univention-lib,
  univention-system-setup (= ${source:Version}),
  univention-network-common,
- univention-management-console-module-appcenter
+ univention-management-console-module-appcenter,
+ x11-utils,
 Recommends: iceweasel | firefox-en | firefox-de | firefox,
  xinit,
  kde-window-manager
