Bug #35378: use openbox instead of kwin
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52214 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -62,9 +62,9 @@ Depends: ${misc:Depends},
  univention-network-common,
  univention-management-console-module-appcenter,
  x11-utils,
+ openbox,
 Recommends: iceweasel | firefox-en | firefox-de | firefox,
  xinit,
- kde-window-manager
 Replaces: univention-setup-boot, univention-system-setup-appliance
 Description: Starting univention-system-setup on next boot
  This package configures the computer to launch UCS System Setup on its next
