use is_localhost_in_admember_mode to check member mode (Bug #35470)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52226 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-heimdal/debian/control
+++ b/base/univention-heimdal/debian/control
@@ -13,7 +13,7 @@ Pre-Depends: heimdal-kdc (>> 0.6.3)
 Depends: ${misc:Depends},
  univention-config-registry,
  univention-base-files,
- shell-univention-lib,
+ shell-univention-lib (>= 3.0.26-41),
  libsasl2-modules-gssapi-heimdal,
  heimdal-servers,
  python-univention,
